feature activate user (#3)
